--- a/apps/creator/tsconfig.json
+++ b/apps/creator/tsconfig.json
@@ -30,8 +30,8 @@
     "tsBuildInfoFile": "dist/tsconfig.tsbuildinfo"
   },
   "include": [
-    "../../apps/client/.next/types/**/*.ts",
-    "../../dist/apps/client/.next/types/**/*.ts",
+    "../../apps/creator/.next/types/**/*.ts",
+    "../../dist/apps/creator/.next/types/**/*.ts",
     "next-env.d.ts",
     "src/**/*.js",
     "src/**/*.jsx",
