--- a/package.json
+++ b/package.json
@@ -2,9 +2,21 @@
   "name": "@only-creators/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "serve:client": "npx nx serve client --turbopack",
+    "serve:creator": "npx nx serve creator",
+    "build:client": "nx build client",
+    "build:creator": "nx build creator",
+    "test:client": "nx test client",
+    "test:creator": "nx test creator",
+    "lint:client": "nx lint client",
+    "lint:creator": "nx lint creator",
+    "serve:all": "nx run-many --target=serve --projects=client,creator"
+  },
   "private": true,
   "dependencies": {
+    "framer-motion": "^12.23.9",
+    "lucide-react": "^0.525.0",
     "next": "~15.2.4",
     "react": "19.0.0",
     "react-dom": "19.0.0"
@@ -23,6 +35,7 @@
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@tailwindcss/postcss7-compat": "^2.2.17",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
     "autoprefixer": "10.4.13",
@@ -35,6 +48,8 @@
     "eslint-plugin-react-hooks": "5.0.0",
     "nx": "21.3.5",
     "postcss": "8.4.38",
+    "postcss-import": "^16.1.1",
+    "postcss-nested": "^7.0.2",
     "prettier": "^2.6.2",
     "tailwindcss": "3.4.3",
     "tslib": "^2.3.0",
