--- a/package.json
+++ b/package.json
@@ -22,22 +22,31 @@
     "react-dom": "19.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@eslint/compat": "^1.1.1",
     "@eslint/eslintrc": "^2.1.1",
     "@eslint/js": "^9.8.0",
     "@next/eslint-plugin-next": "^15.2.4",
     "@nx/eslint": "21.3.5",
-    "@nx/eslint-plugin": "21.3.5",
+    "@nx/eslint-plugin": "^21.3.5",
     "@nx/js": "21.3.5",
     "@nx/next": "21.3.5",
+    "@nx/react": "21.3.5",
+    "@nx/vite": "21.3.5",
+    "@nx/web": "21.3.5",
     "@nx/workspace": "21.3.5",
     "@swc-node/register": "~1.9.1",
     "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@tailwindcss/postcss7-compat": "^2.2.17",
+    "@types/node": "^20.0.0",
     "@types/react": "19.0.0",
     "@types/react-dom": "19.0.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/ui": "^3.0.0",
+    "ajv": "^8.0.0",
     "autoprefixer": "10.4.13",
     "eslint": "^9.8.0",
     "eslint-config-next": "^15.2.4",
@@ -46,6 +55,8 @@
     "eslint-plugin-jsx-a11y": "6.10.1",
     "eslint-plugin-react": "7.35.0",
     "eslint-plugin-react-hooks": "5.0.0",
+    "jiti": "2.4.2",
+    "jsdom": "~22.1.0",
     "nx": "21.3.5",
     "postcss": "8.4.38",
     "postcss-import": "^16.1.1",
@@ -54,9 +65,13 @@
     "tailwindcss": "3.4.3",
     "tslib": "^2.3.0",
     "typescript": "~5.8.2",
-    "typescript-eslint": "^8.29.0"
+    "typescript-eslint": "^8.29.0",
+    "vite": "^6.0.0",
+    "vite-plugin-dts": "~4.5.0",
+    "vitest": "^3.0.0"
   },
   "workspaces": [
-    "apps/*"
+    "apps/*",
+    "libs/*"
   ]
 }
