--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -3,8 +3,17 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.17.7",
+    "@reduxjs/toolkit": "^2.10.1",
+    "@tanstack/react-query": "^5.90.10",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.525.0",
     "next": "~15.2.4",
     "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react-dom": "19.0.0",
+    "react-redux": "^9.2.0",
+    "recharts": "^3.4.1",
+    "tailwind-merge": "^3.4.0"
   }
 }
