--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "private": true,
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.17.7",
     "framer-motion": "^12.23.9",
     "lucide-react": "^0.525.0",
     "next": "~15.2.4",
