--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@lottiefiles/dotlottie-react": "^0.17.7",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
     "@reduxjs/toolkit": "^2.10.1",
     "@tanstack/react-query": "^5.90.10",
     "class-variance-authority": "^0.7.1",
